--- a/app/src/main/res/layout/item_item.xml
+++ b/app/src/main/res/layout/item_item.xml
@@ -10,6 +10,7 @@
         android:layout_height="40dp"
         android:src="@drawable/icon_express"/>
     <TextView
+        android:id="@+id/v_item"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="快递查询"/>
