--- a/app/src/main/res/layout/item_express.xml
+++ b/app/src/main/res/layout/item_express.xml
@@ -2,49 +2,57 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal"
         android:gravity="center_vertical"
-        android:padding="5dp">
-        <View android:layout_width="3dp"
-            android:layout_height="match_parent"
-            android:background="@color/btn_gray"/>
+        >
         <TextView
-            android:id="@+id/v_new"
-            android:layout_width="wrap_content"
+            android:layout_width="154px"
             android:layout_height="wrap_content"
-            android:paddingLeft="3dp"
-            android:paddingRight="3dp"
-            android:layout_marginLeft="5dp"
-            android:layout_marginRight="5dp"
-            android:layout_gravity="center_vertical"
-            android:background="@color/colorAccent"
-            android:textColor="@android:color/white"
-            android:text="最新"/>
+            android:gravity="center"
+            android:id="@+id/v_time"
+            android:text="2016-03-30 12:24:12"
+            android:textSize="24px"
+            />
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:gravity="center"
+            android:layout_marginLeft="10px"
+            android:layout_marginRight="18px"
             android:orientation="vertical">
-            <TextView
+            <View
+                android:id="@+id/v_line_up"
+                android:layout_width="3px"
+                android:layout_height="52px"
+                android:background="@color/bg_gray_dark"/>
+            <ImageView
+                android:id="@+id/v_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/v_time"
-                android:text="2016-03-30"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/v_desc"
-                android:text="到北京了"/>
+                android:src="@drawable/icon_time"/>
+            <View android:id="@+id/v_line_down"
+                android:layout_width="3px"
+                android:layout_height="52px"
+                android:background="@color/bg_gray_dark"/>
         </LinearLayout>
+        <TextView
+            android:id="@+id/v_desc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:paddingRight="18px"
+            android:text="到北京了"
+            android:textSize="26px"
+            />
     </LinearLayout>
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/btn_dark_gray"/>
+        android:layout_height="3px"
+        android:background="@color/bg_gray"/>
 </LinearLayout>
