--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#37b8c9</color>
+    <color name="colorPrimaryDark">#37b8c9</color>
     <color name="colorAccent">#FF4081</color>
 
     <!--  bootstrap 样式按钮  -->
@@ -11,9 +11,29 @@
     <color name="btn_warn">#ec971f</color>
     <color name="btn_danger">#c9302c</color>
     <color name="btn_gray">#efefef</color>
+    <color name="text_gray">#959a9d</color>
     <color name="btn_dark_gray">#adadad</color>
+    <color name="bg_gray">#f5f2f0</color>
+    <color name="bg_gray_dark">#cdccd1</color>
+
+    <color name="black">#353535</color>
 
     <color name="result_view">#b0000000</color>
     <color name="viewfinder_mask">#60000000</color>
     <color name="possible_result_points">#c0ffff00</color>
+
+    <color name="red">#bf360c</color>
+    <color name="ripple_red">#ffbf5232</color>
+    <color name="express_red">#ed4e41</color>
+
+    <color name="ripple_material_teal">#ff149691</color>
+
+    <color name="blue">#304f9f</color>
+    <color name="grey">@color/material_blue_grey_800</color>
+    <color name="light">@color/primary_material_light</color>
+
+    <color name="colorPrimaryGreen">@color/material_deep_teal_500</color>
+
+    <color name="windowBackgroundColor">#333333</color>
+    <color name="black_translucent">#80000000</color>
 </resources>
