--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="30px"
@@ -15,7 +15,9 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:inputType="phone"
-        android:hint="请输入手机号"/>
+        android:hint="请输入手机号"
+        android:imeOptions="actionSearch"
+        />
     <ImageView android:id="@+id/v_query"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -30,7 +32,7 @@
         android:layout_below="@id/v_phone"
         android:paddingTop="50px"
         android:paddingBottom="50px"
-        android:paddingLeft="60px"
+        android:paddingLeft="20px"
         android:paddingRight="60px"
         android:orientation="horizontal"
         android:background="@color/btn_gray"
@@ -47,7 +49,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@id/v_icon"
-            android:textSize="40px"
+            android:textSize="50px"
             android:paddingLeft="30px"
             android:textColor="@color/black"
             tools:text="13123456789"
