--- a/app/src/main/res/layout/layout_base.xml
+++ b/app/src/main/res/layout/layout_base.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/v_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="false"
     android:orientation="vertical">
-    <include layout="@layout/toolbar" />
+    <include layout="@layout/toolbar"/>
 </LinearLayout>
+
