--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -29,6 +29,7 @@
     <color name="ripple_material_teal">#ff149691</color>
 
     <color name="blue">#304f9f</color>
+    <color name="lottery_blue">#56abe4</color>
     <color name="grey">@color/material_blue_grey_800</color>
     <color name="light">@color/primary_material_light</color>
 
