--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -33,4 +33,15 @@
         <item name="spinBars">true</item>
         <item name="color">@android:color/white</item>
     </style>
+    <style name="LotteryRadio">
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">85px</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:layout_marginRight">10px</item>
+        <item name="android:button">@null</item>
+        <item name="android:gravity">center</item>
+        <item name="android:background">@color/btn_success</item>
+        <item name="android:textColor">@android:color/white</item>
+        <item name="android:textSize">35px</item>
+    </style>
 </resources>
