--- a/app/src/main/res/layout/activity_express.xml
+++ b/app/src/main/res/layout/activity_express.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#fff"
     android:orientation="vertical" >
-
+    <include layout="@layout/toolbar"/>
     <RelativeLayout android:id="@+id/reveal_root"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingBottom="24px"
-            android:hint="请输入快递单号1"
+            android:hint="请输入快递单号"
             android:gravity="center_vertical"
             android:textColor="@color/colorPrimaryGreen"
             android:textSize="28px"
