--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -1,70 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingTop="30px"
-    android:paddingLeft="30px"
-    >
-    <EditText
-        android:id="@+id/v_phone"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginRight="64px"
-        android:paddingLeft="10px"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentLeft="true"
-        android:inputType="phone"
-        android:hint="请输入手机号"
-        android:imeOptions="actionSearch"
-        />
-    <ImageView android:id="@+id/v_query"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginRight="30px"
-        android:layout_marginTop="5px"
-        android:src="@drawable/icon_query_green"/>
-    <RelativeLayout android:id="@+id/v_result_panel"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/v_phone"
-        android:paddingTop="50px"
-        android:paddingBottom="50px"
-        android:paddingLeft="20px"
-        android:paddingRight="60px"
-        android:orientation="horizontal"
-        android:background="@color/btn_gray"
-        android:visibility="gone"
-        >
-        <ImageView android:id="@+id/v_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/icon_unicom"
-            android:layout_alignParentLeft="true"
-            />
-        <TextView
-            android:id="@+id/v_phone_no"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+        <import type="net.runningcode.utils.CommonUtil"/>
+        <import type="android.view.View" />
+
+        <variable name="phoneNum" type="String"/>
+        <variable name="supplier" type="String"/>
+    </data>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include layout="@layout/toolbar"/>
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/v_icon"
-            android:textSize="50px"
-            android:paddingLeft="30px"
-            android:textColor="@color/black"
-            tools:text="13123456789"
-            />
-        <TextView
-            android:id="@+id/v_phone_result"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/v_icon"
-            android:layout_below="@id/v_phone_no"
-            android:textSize="40px"
-            android:paddingLeft="30px"
+            android:layout_height="match_parent"
             android:paddingTop="30px"
-            android:textColor="@color/black"
-            tools:text="北京联通"
-            />
-    </RelativeLayout>
-</RelativeLayout>
+            android:paddingLeft="30px"
+            >
+            <EditText
+                android:id="@+id/v_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="64px"
+                android:paddingLeft="10px"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentLeft="true"
+                android:inputType="phone"
+                android:hint="请输入手机号"
+                android:imeOptions="actionSearch"
+                />
+            <ImageView android:id="@+id/v_query"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_alignParentRight="true"
+                       android:layout_alignParentTop="true"
+                       android:layout_marginRight="30px"
+                       android:layout_marginTop="5px"
+                       android:src="@drawable/icon_query_green"/>
+            <RelativeLayout android:id="@+id/v_result_panel"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_below="@id/v_phone"
+                            android:paddingTop="50px"
+                            android:paddingBottom="50px"
+                            android:paddingLeft="20px"
+                            android:paddingRight="60px"
+                            android:orientation="horizontal"
+                            android:background="@color/btn_gray"
+                            android:visibility="@{supplier != null ? View.VISIBLE : View.GONE}"
+                >
+                <ImageView android:id="@+id/v_icon"
+                           android:layout_width="wrap_content"
+                           android:layout_height="wrap_content"
+                           android:layout_alignParentLeft="true"
+                    />
+                <TextView
+                    android:id="@+id/v_phone_no"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/v_icon"
+                    android:textSize="50px"
+                    android:paddingLeft="30px"
+                    android:textColor="@color/black"
+                    tools:text="@{phoneNum}"
+                    />
+                <TextView
+                    android:id="@+id/v_phone_result"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_toRightOf="@id/v_icon"
+                    android:layout_below="@id/v_phone_no"
+                    android:textSize="40px"
+                    android:paddingLeft="30px"
+                    android:paddingTop="30px"
+                    android:textColor="@color/black"
+                    android:text="@{supplier}"
+                    />
+            </RelativeLayout>
+        </RelativeLayout>
+    </LinearLayout>
+</layout>
