--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -31,6 +31,24 @@
                 android:hint="请输入手机号"
                 android:imeOptions="actionSearch"
                 />
+            <ImageView android:id="@+id/v_clear"
+                       android:layout_width="wrap_content"
+                       android:layout_height="wrap_content"
+                       android:layout_marginTop="5px"
+                       android:layout_marginRight="24px"
+                       android:src="@drawable/icon_clear"
+                       android:layout_toLeftOf="@+id/view"
+                       android:visibility="gone"
+                />
+            <View
+                android:id="@+id/view"
+                android:layout_width="1px"
+                android:layout_height="30px"
+                android:layout_marginTop="5px"
+                android:layout_marginRight="24px"
+                android:layout_toLeftOf="@+id/v_query"
+                android:background="#cdccd1"
+                android:visibility="gone"/>
             <ImageView android:id="@+id/v_query"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
