--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,8 +4,9 @@
     android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="?attr/colorPrimary"
+        android:background="@drawable/gradient_toolbar"
         >
+        <!--android:background="?attr/colorPrimary"-->
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
