1、添加卡顿监控BlockDetector; 2、引入butterknife； 3、修改语音播放接口； 4、增加生成短连接、薪资计算功能；

--- a/app/src/main/res/layout/activity_phone.xml
+++ b/app/src/main/res/layout/activity_phone.xml
@@ -1,18 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
 
-    <data>
-        <import type="net.runningcode.utils.CommonUtil"/>
-        <import type="android.view.View" />
 
-        <variable name="phoneNum" type="String"/>
-        <variable name="supplier" type="String"/>
-    </data>
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="match_parent"
+                  xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools"
         android:orientation="vertical">
-        <include layout="@layout/toolbar"/>
+
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -69,7 +63,7 @@
                             android:paddingRight="60px"
                             android:orientation="horizontal"
                             android:background="@color/btn_gray"
-                            android:visibility="@{supplier != null ? View.VISIBLE : View.GONE}"
+
                 >
                 <ImageView android:id="@+id/v_icon"
                            android:layout_width="wrap_content"
@@ -84,7 +78,7 @@
                     android:textSize="50px"
                     android:paddingLeft="30px"
                     android:textColor="@color/black"
-                    tools:text="@{phoneNum}"
+
                     />
                 <TextView
                     android:id="@+id/v_phone_result"
@@ -96,9 +90,9 @@
                     android:paddingLeft="30px"
                     android:paddingTop="30px"
                     android:textColor="@color/black"
-                    android:text="@{supplier}"
+
                     />
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
-</layout>
+
