--- a/app/src/main/res/layout/activity_id.xml
+++ b/app/src/main/res/layout/activity_id.xml
@@ -1,20 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools">
-
-    <data>
-        <import type="net.runningcode.utils.CommonUtil"/>
-        <import type="android.view.View" />
-
-        <variable name="address" type="String"/>
-        <variable name="birthday" type="String"/>
-        <variable name="constellation" type="String"/>
-        <variable name="zodiac" type="String"/>
-    </data>
-    <LinearLayout android:layout_width="match_parent"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                  xmlns:tools="http://schemas.android.com/tools"
+                  android:layout_width="match_parent"
                   android:layout_height="match_parent"
         android:orientation="vertical">
-        <include layout="@layout/toolbar"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -72,7 +61,6 @@
                             android:paddingRight="60px"
                             android:orientation="horizontal"
                             android:background="@color/btn_gray"
-                            android:visibility="@{address != null ? View.VISIBLE : View.GONE}"
             >
                 <ImageView android:id="@+id/v_icon"
                            android:layout_width="wrap_content"
@@ -88,7 +76,6 @@
                     android:textSize="40px"
                     android:paddingLeft="30px"
                     android:textColor="@color/black"
-                    android:text="@{birthday}"
                     tools:text="1111111111"
                     />
                 <TextView
@@ -100,7 +87,6 @@
                     android:textSize="40px"
                     android:paddingLeft="30px"
                     android:textColor="@color/black"
-                    android:text="@{constellation}"
                     tools:text="天蝎座"
                     android:visibility="gone"
                     />
@@ -113,9 +99,7 @@
                     android:textSize="40px"
                     android:paddingLeft="100px"
                     android:textColor="@color/black"
-                    android:text="@{zodiac}"
                     tools:text="生肖：牛"
-                    android:visibility="gone"
                     />
                 <TextView
                     android:id="@+id/v_address"
@@ -127,9 +111,7 @@
                     android:paddingLeft="30px"
                     android:paddingTop="30px"
                     android:textColor="@color/black"
-                    android:text="@{address}"
                     />
             </RelativeLayout>
         </RelativeLayout>
     </LinearLayout>
-</layout>
