--- a/app/src/main/res/layout/activity_num2str.xml
+++ b/app/src/main/res/layout/activity_num2str.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="30px"
+        android:paddingLeft="30px"
         android:orientation="horizontal">
 
         <EditText android:id="@+id/v_no"
@@ -19,14 +20,14 @@
             android:gravity="center_vertical"
             android:textColor="@color/colorPrimaryGreen"
             android:textSize="28px"
-          android:background="@null"
-          android:drawablePadding="5dp"
+            android:paddingLeft="10px"
+            android:background="@null"
+            android:drawablePadding="5dp"
             android:textCursorDrawable="@null"
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
-            android:layout_toLeftOf="@+id/v_query"
-            android:layout_marginLeft="22px"
             android:inputType="numberSigned"
+            android:maxLength="20"
             />
         <ImageView android:id="@+id/v_clear"
             android:layout_width="wrap_content"
