--- a/app/src/main/res/layout/activity_bank.xml
+++ b/app/src/main/res/layout/activity_bank.xml
@@ -87,7 +87,7 @@
             android:layout_toEndOf="@id/v_logo"
             android:layout_below="@id/v_bank_name"
             android:layout_marginTop="26px"
-            android:textColor="@color/lite_blue"
+            android:textColor="@color/colorPrimaryGreen"
             android:textSize="36px"
             android:inputType="phone"
             android:layout_toRightOf="@id/v_logo"/>
