--- a/app/src/main/res/layout/item_item_ad.xml
+++ b/app/src/main/res/layout/item_item_ad.xml
@@ -7,7 +7,7 @@
     android:background="@android:color/white"
     app:mrl_rippleInAdapter="true"
     app:mrl_rippleOverlay="true"
-    app:mrl_rippleColor="@color/black_de">
+    app:mrl_rippleColor="@color/black">
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
